# RPMTW-Discord-Bot-python

./: .env  .gitignore  README.md  cog_config.toml  config.toml  constant.toml  debug_universe_chat_server.py  pyproject.toml  run.bat  run.sh
data/: .gitignore  constant.toml
extension/: basic.py  chef.py  dynamic_voive.py  event.py  logger.py  permission_control.py  tool.py  universe_chat.py
lib/: universe_chat.py
sample/: .env
src/bot/: exceptions.py  main.py
src/bot/core/: bot.py  extension.py  universe_chat.py
src/bot/data/: constant.toml
src/bot/extensions/: basic.py  chef.py  dynamic_voive.py  event.py  extension_manager.py  logger.py  permission_control.py  universe_chat.py
